--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<a href="p1/index.html">Project 1</a>
-<a href="modern/modern.html">Modern</a>
-<a href="p3/index.html">Modern</a>
+<a href="p1/index.html">Project 1</a> <br>
+<a href="modern/modern.html">Modern</a><br>
+<a href="p3/index.html">Frogger Clone</a>
