Clicking on map adds marker to scrollable markers list

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <a href="p1/index.html">Project 1</a> <br>
 <a href="modern/modern.html">Modern</a><br>
 <a href="p3/index.html">Frogger Clone</a><br>
-<a href="p4/index.html">Optimized Profile</a>
+<a href="p4/index.html">Optimized Profile</a><br>
+<a href="p5/index.html">Neighborhood Map Project</a><br>
