--- a/p5/index.html
+++ b/p5/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <div class="title">
-        <h1>API</h1>
+        <h1>Project 5</h1>
     </div>
 
     <div class="filter">
