--- a/p5/index.html
+++ b/p5/index.html
@@ -22,9 +22,9 @@
             });
 
             Offline.on('confirmed-up', function () {
-                $main.hide();
+                $main.show();
                 $mid.show();
-                $offline.show();
+                $offline.hide();
             });
         });
     </script>
