Added auto check for offline.js

--- a/p5/index.html
+++ b/p5/index.html
@@ -20,6 +20,11 @@
                 viewModel.disconnected(false);
             });
         });
+        var run = function(){
+            if (Offline.state === 'up')
+                Offline.check();
+        }
+        setInterval(run, 5000);
     </script>
 </head>
 <body>
